--- a/AddressBook.Contacts.Application/AddressBook.Contacts.Application.csproj
+++ b/AddressBook.Contacts.Application/AddressBook.Contacts.Application.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Handlers\" />
-    <Folder Include="Consumers\" />
-    <Folder Include="Queries\" />
+    <Folder Include="Queries\Handlers\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.0.6" />
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
