added redis cache

--- a/AddressBook.Contacts/appsettings.json
+++ b/AddressBook.Contacts/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=AddressBook; User=sa; Password=Passw0rd;Connection Timeout=60;"
   },
+  "RedisConfiguration": {
+    "Host": "localhost",
+    "Port": 6379
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
