--- a/AddressBook.Contacts.Application/AddressBook.Contacts.Application.csproj
+++ b/AddressBook.Contacts.Application/AddressBook.Contacts.Application.csproj
@@ -1,23 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Queries\Handlers\" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MassTransit" Version="8.0.6" />
+		<PackageReference Include="MediatR" Version="10.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.9" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MassTransit" Version="8.0.6" />
-    <PackageReference Include="MediatR" Version="10.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AddressBook.Contacts.Domain\AddressBook.Contacts.Domain.csproj" />
-    <ProjectReference Include="..\AddressBook.Contacts.Infrastructure\AddressBook.Contacts.Infrastructure.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\AddressBook.Contacts.Domain\AddressBook.Contacts.Domain.csproj" />
+		<ProjectReference Include="..\AddressBook.Contacts.Infrastructure\AddressBook.Contacts.Infrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
