--- a/AddressBook.Contacts/appsettings.json
+++ b/AddressBook.Contacts/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=AddressBook; User=sa; Password=Passw0rd;Connection Timeout=60;"
   },
+  "ElasticSearchUrl": "http://localhost:9200",
   "RedisConfiguration": {
     "Host": "localhost",
     "Port": 6379
