--- a/AddressBook.Person/Properties/launchSettings.json
+++ b/AddressBook.Person/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "profiles": {
-    "Contacts.API": {
+    "Person.API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
